--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -7,7 +7,6 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=.5, minimum-scale=.5, maximum-scale=.5, user-scalable=no" />
 	<script src="http://webapi.amap.com/maps?v=1.3&key=42c177c66c03437400aa9560dad5451e&plugin=AMap.Geocoder" type="text/javascript"></script>
-	<script src="jquery-2.2.3.min.js"></script>
     <script>
       var CONFIG = {
       	header:"/mock/header.json",
@@ -67,6 +66,9 @@
 	    }
 
 	    docEl.setAttribute('data-dpr', dpr);
+	    if(!win.navigator.appVersion.match(/iphone/gi)){
+		    docEl.setAttribute('data-dpr', 1);
+	    }
 	    if (!metaEl) {
 	        metaEl = doc.createElement('meta');
 	        metaEl.setAttribute('name', 'viewport');
