--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
 	<title>签到</title>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<script src="http://webapi.amap.com/maps?v=1.3&key=42c177c66c03437400aa9560dad5451e&plugin=AMap.Geocoder" type="text/javascript"></script>
+	<script src="//webapi.amap.com/maps?v=1.3&key=42c177c66c03437400aa9560dad5451e&plugin=AMap.Geocoder" type="text/javascript"></script>
     <script>
       var CONFIG = {
       	domain:"/"
