--- a/caiyun/book-log.html
+++ b/caiyun/book-log.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>签到记录</title>
-	<meta http-equiv="refresh" content="0; url=index.html#record" />
+	<script>
+	location.href="index.html#record"
+	</script>
 </head>
 <body>
 </body>
